--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 				<span>made by</span>
 				<a href="http://eduardmoldovan.com/">Eduárd Moldován</a>
 			</div>
-			<h2>Paste it, set your options, get your finished highlighted code. I used <a href="http://prismjs.com">Prism.js</a> for this project, other highlighters might be introduced later.</h2>
+			<h2>Paste it, set your options, get your finished highlighted code. I used <a href="http://prismjs.com" target="_blank">Prism.js</a> for this project, other highlighters might be introduced later.</h2>
 		</header>
 		<article>
 			<ul class="tabs">
@@ -72,11 +72,13 @@
 				</div>
 			</div>
 			<div id="tab-3" class="tab">
-				<h3>Link <a href="">this file</a> into your source, then use the code below.</h3>
+				<h3>Download the appropriate files from the <a href="http://prismjs.com/download.html" target="_blank">Prism.js download page</a>, link them into your source, then use the code below.</h3>
 				<textarea placeholder="No code pasted yet"></textarea>
 			</div>
 		</article>
-		<footer></footer>
+		<footer>
+			<h2>The source is available on <a href="https://github.com/edimoldovan/code-highlight">Github</a>.</h2>
+		</footer>
 	</div>
 </body>
 </html>
