Small wording and design fix

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
 	<div class="container">
 		<header>
+			<a class="back" href="/projects/">&laquo; back to the projects page</a>
 			<h1>Highlight <span>&lt;code&gt;</span> without JavaScript</h1>
 			<div>
 				<span>made by</span>
