--- a/index.html
+++ b/index.html
@@ -7,6 +7,19 @@
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script> 
 <script id="js" src="./common/prism/funky/prism.js"></script>
 <script src="./javascripts/default.js"></script>
+
+<meta property="og:title" content="Highlight <code> without JavaScript" />
+<meta property="og:site_name" content="Eduard Moldovan&rsquo;s personal blog" />
+<meta property="og:description" content="Simple code highlighter tool based on Prism.js." />
+
+<meta name="twitter:card" content="summary" />
+<meta name="twitter:site" content="@edimoldovan" />
+<meta name="twitter:creator" content="@edimoldovan" />
+<meta name="twitter:url" content="http://eduardmoldovan.com/technical/ember-10-and-ember-data-10-beta-1/" />
+<meta name="twitter:title" content="Highlight <code> without JavaScript" />
+<meta name="twitter:description" content="Simple code highlighter tool based on Prism.js." />
+<script>
+
 </head>
 <body>
 	<div class="container">
